Project

General

Profile

Actions

Bug #41839

closed

rgw: data sync start delay if remote haven't init data_log

Added by Tianshan Qu over 4 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if remote have no object write after startup, the data_log will not init,
so the data_log list in RGWReadRemoteDataLogShardCR will get -ENOENT and data sync error exit.
The RGWDataSyncShardControlCR will wait backoff time to try again, which cause the data sync some time delay.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #41896: luminous: rgw: data sync start delay if remote haven't init data_logRejectedActions
Copied to rgw - Backport #41897: mimic: rgw: data sync start delay if remote haven't init data_logResolvedPrashant DActions
Copied to rgw - Backport #41898: nautilus: rgw: data sync start delay if remote haven't init data_logResolvedPrashant DActions
Actions #2

Updated by Casey Bodley over 4 years ago

  • Status changed from New to Pending Backport
  • Tags set to multisite
  • Backport set to luminous mimic nautilus
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41896: luminous: rgw: data sync start delay if remote haven't init data_log added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41897: mimic: rgw: data sync start delay if remote haven't init data_log added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41898: nautilus: rgw: data sync start delay if remote haven't init data_log added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF