rgw: fix data sync start delay if remote haven't init data_log

Fixes: https://tracker.ceph.com/issues/41839

Signed-off-by: Tianshan Qu <tianshan@xsky.com>
(cherry picked from commit 339344ab1928ea805f55368b854ade35efcecf08)